syntax = "proto3";

package set_filter_state.options.gloo.solo.io;

option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/options/set_filter_state";
import "extproto/ext.proto";
import "validate/validate.proto";

// Configuration for the Set-Filter-State HTTP Filter
message SetFilterState {
  repeated FilterStateValue on_request_headers = 1;
}

// Code below from https://github.com/envoyproxy/envoy/blob/c9eb42b909fa5b9c5d7dbf1e09e23e826606e1d5/api/envoy/extensions/filters/common/set_filter_state/v3/value.proto

// A filter state key and value pair.
message FilterStateValue {
  enum SharedWithUpstream {
    // Object is not shared with the upstream internal connections.
    NONE = 0;

    // Object is shared with the upstream internal connection.
    ONCE = 1;

    // Object is shared with the upstream internal connection and any internal connection upstream from it.
    TRANSITIVE = 2;
  }

  oneof key {
    option (validate.required) = true;

    // Filter state object key. The key is used to lookup the object factory, unless :ref:`factory_key
    // <envoy_v3_api_field_extensions.filters.common.set_filter_state.v3.FilterStateValue.factory_key>` is set. See
    // :ref:`the well-known filter state keys <well_known_filter_state>` for a list of valid object keys.
    string object_key = 1 [(validate.rules).string = {min_len: 1}];
  }

  // Optional filter object factory lookup key. See :ref:`the well-known filter state keys <well_known_filter_state>`
  // for a list of valid factory keys.
  string factory_key = 6;

  oneof value {
    option (validate.required) = true;

    // Uses the :ref:`format string <config_access_log_format_strings>` to
    // instantiate the filter state object value.
    .solo.io.envoy.config.core.v3.SubstitutionFormatString format_string = 2;
  }

  // If marked as read-only, the filter state key value is locked, and cannot
  // be overridden by any filter, including this filter.
  bool read_only = 3;

  // Configures the object to be shared with the upstream internal connections. See :ref:`internal upstream
  // transport <config_internal_upstream_transport>` for more details on the filter state sharing with
  // the internal connections.
  SharedWithUpstream shared_with_upstream = 4;

  // Skip the update if the value evaluates to an empty string.
  // This option can be used to supply multiple alternatives for the same filter state object key.
  bool skip_if_empty = 5;
}
